Fix scrollbar

--- a/src/components/Terminal.css
+++ b/src/components/Terminal.css
@@ -8,6 +8,21 @@
     justify-content: flex-end;
 }
 
+.terminal-content {
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 90%;
+    width: 100%;
+    display: block;
+    background-color: black;
+    color: rgb(0, 255, 0);
+    border: 2px solid #1E1E1E;
+}
+
+.terminal-content > .simplebar-track.simplebar-vertical .simplebar-scrollbar:before {
+    background-color: #343434;
+}
+
 .bottom-buttons {
     margin: 1%;
     width: 35%;
@@ -17,12 +32,8 @@
 }
 
 pre {
-    background-color: black;
-    color: rgb(0, 255, 0);
     display: block;
-    height: 90%;
-    border: 2px solid #1E1E1E;
-    overflow: scroll;
+    height: 100%;
+    width: 100%;
     margin: 0;
-    width: 100%
   }
